src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void CLAHE_Delete(void* self);
extern "C" __declspec(dllexport) void CLAHE_apply_0(void* self, void* src, void* dst);
extern "C" __declspec(dllexport) void CLAHE_setClipLimit_0(void* self, double clipLimit);
extern "C" __declspec(dllexport) double CLAHE_getClipLimit_0(void* self);
extern "C" __declspec(dllexport) void CLAHE_setTilesGridSize_0(void* self, cv::Size tileGridSize);
extern "C" __declspec(dllexport) cv::Size CLAHE_getTilesGridSize_0(void* self);
extern "C" __declspec(dllexport) void CLAHE_setBitShift_0(void* self, int bitShift);
extern "C" __declspec(dllexport) int CLAHE_getBitShift_0(void* self);
extern "C" __declspec(dllexport) void CLAHE_collectGarbage_0(void* self);
extern "C" __declspec(dllexport) void Filter2DParams_Delete(void* self);
extern "C" __declspec(dllexport) int Filter2DParams_anchorX_get(void* self);
extern "C" __declspec(dllexport) void Filter2DParams_anchorX_set(void* self, int val);
extern "C" __declspec(dllexport) int Filter2DParams_anchorY_get(void* self);
extern "C" __declspec(dllexport) void Filter2DParams_anchorY_set(void* self, int val);
extern "C" __declspec(dllexport) int Filter2DParams_borderType_get(void* self);
extern "C" __declspec(dllexport) void Filter2DParams_borderType_set(void* self, int val);
extern "C" __declspec(dllexport) int Filter2DParams_ddepth_get(void* self);
extern "C" __declspec(dllexport) void Filter2DParams_ddepth_set(void* self, int val);
extern "C" __declspec(dllexport) double Filter2DParams_scale_get(void* self);
extern "C" __declspec(dllexport) void Filter2DParams_scale_set(void* self, double val);
extern "C" __declspec(dllexport) double Filter2DParams_shift_get(void* self);
extern "C" __declspec(dllexport) void Filter2DParams_shift_set(void* self, double val);
extern "C" __declspec(dllexport) void FontFace_Delete(void* self);
extern "C" __declspec(dllexport) void* FontFace_New_0();
extern "C" __declspec(dllexport) void* FontFace_New_1(const char* fontPathOrName);
extern "C" __declspec(dllexport) bool FontFace_set_0(void* self, const char* fontPathOrName);
extern "C" __declspec(dllexport) const char* FontFace_getName_0(void* self);
extern "C" __declspec(dllexport) bool FontFace_setInstance_0(void* self, void* params);
extern "C" __declspec(dllexport) bool FontFace_getInstance_0(void* self, void* params);
extern "C" __declspec(dllexport) void GeneralizedHough_Delete(void* self);
extern "C" __declspec(dllexport) void GeneralizedHough_setTemplate_0(void* self, void* templ, cv::Point templCenter);
extern "C" __declspec(dllexport) void GeneralizedHough_setTemplate_1(void* self, void* edges, void* dx, void* dy, cv::Point templCenter);
extern "C" __declspec(dllexport) void GeneralizedHough_detect_0(void* self, void* image, void* positions, void* votes);
extern "C" __declspec(dllexport) void GeneralizedHough_detect_1(void* self, void* edges, void* dx, void* dy, void* positions, void* votes);
extern "C" __declspec(dllexport) void GeneralizedHough_setCannyLowThresh_0(void* self, int cannyLowThresh);
extern "C" __declspec(dllexport) int GeneralizedHough_getCannyLowThresh_0(void* self);
extern "C" __declspec(dllexport) void GeneralizedHough_setCannyHighThresh_0(void* self, int cannyHighThresh);
extern "C" __declspec(dllexport) int GeneralizedHough_getCannyHighThresh_0(void* self);
extern "C" __declspec(dllexport) void GeneralizedHough_setMinDist_0(void* self, double minDist);
extern "C" __declspec(dllexport) double GeneralizedHough_getMinDist_0(void* self);
extern "C" __declspec(dllexport) void GeneralizedHough_setDp_0(void* self, double dp);
extern "C" __declspec(dllexport) double GeneralizedHough_getDp_0(void* self);
extern "C" __declspec(dllexport) void GeneralizedHough_setMaxBufferSize_0(void* self, int maxBufferSize);
extern "C" __declspec(dllexport) int GeneralizedHough_getMaxBufferSize_0(void* self);
extern "C" __declspec(dllexport) void GeneralizedHoughBallard_Delete(void* self);
extern "C" __declspec(dllexport) void GeneralizedHoughBallard_setLevels_0(void* self, int levels);
extern "C" __declspec(dllexport) int GeneralizedHoughBallard_getLevels_0(void* self);
extern "C" __declspec(dllexport) void GeneralizedHoughBallard_setVotesThreshold_0(void* self, int votesThreshold);
extern "C" __declspec(dllexport) int GeneralizedHoughBallard_getVotesThreshold_0(void* self);
extern "C" __declspec(dllexport) void GeneralizedHoughGuil_Delete(void* self);
extern "C" __declspec(dllexport) void GeneralizedHoughGuil_setXi_0(void* self, double xi);
extern "C" __declspec(dllexport) double GeneralizedHoughGuil_getXi_0(void* self);
extern "C" __declspec(dllexport) void GeneralizedHoughGuil_setLevels_0(void* self, int levels);
extern "C" __declspec(dllexport) int GeneralizedHoughGuil_getLevels_0(void* self);
extern "C" __declspec(dllexport) void GeneralizedHoughGuil_setAngleEpsilon_0(void* self, double angleEpsilon);
extern "C" __declspec(dllexport) double GeneralizedHoughGuil_getAngleEpsilon_0(void* self);
extern "C" __declspec(dllexport) void GeneralizedHoughGuil_setMinAngle_0(void* self, double minAngle);
extern "C" __declspec(dllexport) double GeneralizedHoughGuil_getMinAngle_0(void* self);
extern "C" __declspec(dllexport) void GeneralizedHoughGuil_setMaxAngle_0(void* self, double maxAngle);
extern "C" __declspec(dllexport) double GeneralizedHoughGuil_getMaxAngle_0(void* self);
extern "C" __declspec(dllexport) void GeneralizedHoughGuil_setAngleStep_0(void* self, double angleStep);
extern "C" __declspec(dllexport) double GeneralizedHoughGuil_getAngleStep_0(void* self);