src/OpenCV5Sharp/Generated/NativeMethods.Imgproc.cs


namespace OpenCV5Sharp
{
    internal static partial class NativeMethods
    {
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CLAHE_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CLAHE_apply_0(ClaheHandle self, MatHandle src, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CLAHE_setClipLimit_0(ClaheHandle self, double clipLimit);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double CLAHE_getClipLimit_0(ClaheHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CLAHE_setTilesGridSize_0(ClaheHandle self, Size tileGridSize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Size CLAHE_getTilesGridSize_0(ClaheHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CLAHE_setBitShift_0(ClaheHandle self, int bitShift);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int CLAHE_getBitShift_0(ClaheHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CLAHE_collectGarbage_0(ClaheHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Filter2DParams_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Filter2DParams_anchorX_get(Filter2DParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Filter2DParams_anchorX_set(Filter2DParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Filter2DParams_anchorY_get(Filter2DParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Filter2DParams_anchorY_set(Filter2DParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Filter2DParams_borderType_get(Filter2DParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Filter2DParams_borderType_set(Filter2DParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Filter2DParams_ddepth_get(Filter2DParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Filter2DParams_ddepth_set(Filter2DParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double Filter2DParams_scale_get(Filter2DParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Filter2DParams_scale_set(Filter2DParamsHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double Filter2DParams_shift_get(Filter2DParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Filter2DParams_shift_set(Filter2DParamsHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FontFace_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr FontFace_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr FontFace_New_1([MarshalAs(UnmanagedType.LPUTF8Str)] string? fontPathOrName);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool FontFace_set_0(FontFaceHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? fontPathOrName);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr FontFace_getName_0(FontFaceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool FontFace_setInstance_0(FontFaceHandle self, IntPtr @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool FontFace_getInstance_0(FontFaceHandle self, IntPtr @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHough_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHough_setTemplate_0(GeneralizedHoughHandle self, MatHandle templ, Point templCenter);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHough_setTemplate_1(GeneralizedHoughHandle self, MatHandle edges, MatHandle dx, MatHandle dy, Point templCenter);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHough_detect_0(GeneralizedHoughHandle self, MatHandle image, MatHandle positions, IntPtr votes);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHough_detect_1(GeneralizedHoughHandle self, MatHandle edges, MatHandle dx, MatHandle dy, MatHandle positions, IntPtr votes);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHough_setCannyLowThresh_0(GeneralizedHoughHandle self, int cannyLowThresh);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GeneralizedHough_getCannyLowThresh_0(GeneralizedHoughHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHough_setCannyHighThresh_0(GeneralizedHoughHandle self, int cannyHighThresh);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GeneralizedHough_getCannyHighThresh_0(GeneralizedHoughHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHough_setMinDist_0(GeneralizedHoughHandle self, double minDist);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double GeneralizedHough_getMinDist_0(GeneralizedHoughHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHough_setDp_0(GeneralizedHoughHandle self, double dp);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double GeneralizedHough_getDp_0(GeneralizedHoughHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHough_setMaxBufferSize_0(GeneralizedHoughHandle self, int maxBufferSize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GeneralizedHough_getMaxBufferSize_0(GeneralizedHoughHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHoughBallard_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHoughBallard_setLevels_0(GeneralizedHoughBallardHandle self, int levels);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GeneralizedHoughBallard_getLevels_0(GeneralizedHoughBallardHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHoughBallard_setVotesThreshold_0(GeneralizedHoughBallardHandle self, int votesThreshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GeneralizedHoughBallard_getVotesThreshold_0(GeneralizedHoughBallardHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHoughGuil_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHoughGuil_setXi_0(GeneralizedHoughGuilHandle self, double xi);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double GeneralizedHoughGuil_getXi_0(GeneralizedHoughGuilHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHoughGuil_setLevels_0(GeneralizedHoughGuilHandle self, int levels);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GeneralizedHoughGuil_getLevels_0(GeneralizedHoughGuilHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHoughGuil_setAngleEpsilon_0(GeneralizedHoughGuilHandle self, double angleEpsilon);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double GeneralizedHoughGuil_getAngleEpsilon_0(GeneralizedHoughGuilHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHoughGuil_setMinAngle_0(GeneralizedHoughGuilHandle self, double minAngle);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double GeneralizedHoughGuil_getMinAngle_0(GeneralizedHoughGuilHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHoughGuil_setMaxAngle_0(GeneralizedHoughGuilHandle self, double maxAngle);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double GeneralizedHoughGuil_getMaxAngle_0(GeneralizedHoughGuilHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHoughGuil_setAngleStep_0(GeneralizedHoughGuilHandle self, double angleStep);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double GeneralizedHoughGuil_getAngleStep_0(GeneralizedHoughGuilHandle self);
